--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "howler",
+  "name": "@curthipster/howler",
   "version": "2.2.3",
   "description": "Javascript audio library for the modern web.",
   "homepage": "https://howlerjs.com",
